rs/tests/failures/unstable/bad_lifetime.stderr
error[E0597]: `a` does not live long enough
 --> tests/failures/unstable/bad_lifetime.rs:7:13
  |
6 |         let a = 1;
  |             - binding `a` declared here
7 |         b = &a;
  |             ^^ borrowed value does not live long enough
8 |     }
  |     - `a` dropped here while still borrowed
9 |     let c = *b;
  |             -- borrow later used here
